docs: sync all docs/notes to current code + decision guides + config consistency
- Add DECISIONS.md (central when-to-use index) + selection-guide sections in CHUNKING/RERANKING/HYBRID-SEARCH
- Fix doc drift vs code: API (/api/governance not /api/audit, +12 endpoints), ARCHITECTURE/SDS (drop Hello/Ask/AuditController, add hybrid+rerank+chunking+multimodal), ERD/DATA-MODEL (document_catalog, QueryLog new columns, Article.namespace), README config defaults, GOVERNANCE/HANDOVER/H2-CONSOLE/SWAGGER endpoints
- Update in-package learning notes + mermaid (ARCHITECTURE, RAG-FLOW) to current RAG pipeline
- Strip section-sign and decorative emoji from all .md
- Config: rerank default cross->mmr (yaml/@Value/fallback aligned); storage.tier.threshold dev=3 demo / prod=500